# MonkeyType

./: .gitattributes  CMakeLists.txt  README.md  const.h  draw.cpp  draw.h  main.cpp  parse.cpp  parse.h  setget.cpp  setget.h
reqfiles/: Config.txt  lib.csv
